logs/job_845.err
  File "/workspace/job.py", line 15
    conda activate moldysim
          ^^^^^^^^
SyntaxError: invalid syntax
